feat: redis implementation and number decomposition
