# src/shared/infra/http/routes/index.ts
@@ -1,5 +1,8 @@
 import { Router } from 'express';
+import { decompositionRoutes } from './decomposition.router';
 
 const router = Router();
+
+router.use("/decomposition", decompositionRoutes);
 
 export { router };
